Drama Events added

--- a/index.html
+++ b/index.html
@@ -1493,9 +1493,118 @@
 			    </div>
 			    <div class="modal-body">
 			      <div class="row">
-	                        <div class="sponsor-type"><center>Title Sponsor</center></div>
-	                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
-	                        </div>
+	                    <div class="col-xs-3">
+	                    	<ul class="event-ul nav nav-tabs nav-stacked">
+	                            <li><a data-toggle="tab" href="#nukkad" class="event-list float-nav">Nukkad</a></li>
+	                            <li><a data-toggle="tab" href="#natya" class="event-list float-nav">Natya</a></li>
+	                        </ul>
+	                    </div>
+	                    <div class="col-xs-9">
+	                    	<div class= "tab-content">
+		                    	<!-- Nukkad -->
+		                    	<div id="nukkad" class="tab-pane fade in active">
+			                    	<ul class="nav nav-tabs">
+						                <li class="active"><a data-toggle="tab" href="#nukkadhome">Info</a></li>
+						                <li><a data-toggle="tab" href="#nukkadmenu1">Rules</a></li>
+						                <li><a data-toggle="tab" href="#nukkadmenu2">Contact</a></li>
+						                <button class="btn pull-right" href="https://docs.google.com/forms/d/1v0aiBC8-hb0xxZ4EUiXITfXjhhBMh4AsmH_OxNpBHz0/viewform">Register</button>
+						            </ul>
+
+						            <div class="tab-content">
+						                <div id="nukkadhome" class="tab-pane fade in active">
+						                    <div class="info-content">
+						                        <div class="info-row">With   any   part   you   play   there   is   a   certain   amount   of   yourself   in   it. There   has   tobe,otherwise it’s not acting.It’s lying.”The deep message wrapped in    emotions, humor and energy  is what nukkad is known for.The artists shall roar till their message spreads farand wide.
+						                        </div>
+						                        <div class="info-col">
+						                            <b>Date: </b>13 Feb<br>
+						                            <b>Time: </b>10:00 am<br>
+						                            <b>Venue: </b>Mech C Parking<br>
+						                        </div>
+						                        <div class="info-col"></div>
+						                    </div>
+						                </div>
+						                <div id="nukkadmenu1" class="tab-pane fade">
+						                    <div class="rule-content">1. The team size represents the number of people registered as a team. Only these shall be allowed to perform the street play.<br>
+						                        2. Minimum of 8 actors are to be included in the team.<br>
+						                        3. The time limit is 21 minute (empty stage to empty stage).<br>
+						                        4. Music accompanists are included in the team number stated above.<br>
+						                        5. Teams are expected to perform at an open air venue, on a circular stage with audience all around.<br>
+						                        6. No electrical appliances shall be allowed during the performance, whether inside or outside the circle of performance.<br>
+						                        7. Only live music is allowed. Teams will have to bring their own instruments - no instrument shall be provided.<br>
+						                        8. Language of the performance should be Hindi/English or both. However short sub passages in other languages are allowed.<br>
+						                        9. Any kind of fluid, live animals, flame, heavy object or any material which has a possibility of damaging the stage is not allowed.<br>
+						                        10. Dry colours may be used during the play, but the teams have to clean the stage after their performance and the cleaning time will be included in the performance time.<br>
+						                        11. Teams will be heavily penalised if they exceed the time limit.<br>
+						                        12. Plays can be based on any theme but since performance is being held at public venues, any content directed against a certain political group or religious community is strictly prohibited.<br>
+						                        13. Obscenity (at the discretion of judges) of any kind is not allowed and may lead to disqualification.<br>
+						                        14. Any kind of plagiarism and profanity will lead to immediate disqualification.<br>
+						                        15. The decision of the judges will be final and binding.<br>
+						                    </div>
+						                </div>
+						                <div id="nukkadmenu2" class="tab-pane fade">
+						                    <div class="contact-content">
+						                        <b>Vineet Maurya </b> +91-9810383175 <br>
+						                        <b>Vaibhav Chauhan </b> +91-9968733717 <br>
+						                    </div>
+						                </div>
+						            </div>
+						        </div>
+
+					            <!-- Natya -->
+					            <div id="natya" class="tab-pane fade">
+						            <ul class="nav nav-tabs">
+						                <li class="active"><a data-toggle="tab" href="#natyahome">Info</a></li>
+						                <li><a data-toggle="tab" href="#natyamenu1">Rules</a></li>
+						                <li><a data-toggle="tab" href="#natyamenu2">Contact</a></li>
+						                <button class="btn pull-right" href="https://docs.google.com/forms/d/1v0aiBC8-hb0xxZ4EUiXITfXjhhBMh4AsmH_OxNpBHz0/viewform">Register</button>
+						            </ul>
+
+						            <div class="tab-content">
+						                <div id="natyahome" class="tab-pane fade in active">
+						                    <div class="info-content">
+						                        <div class="info-row">
+						                        </div>
+						                        <div class="info-col">
+						                            <b>Date: </b>15 Feb<br>
+						                            <b>Time: </b>10:00 am<br>
+						                            <b>Venue: </b>BR Ambedkar Auditorium<br>
+						                        </div>
+						                        <div class="info-col"></div>
+						                    </div>
+						                </div>
+						                <div id="natyamenu1" class="tab-pane fade">
+						                    <div class="rule-content">
+						                        1. Performance should be in Hindi or English or both. However short sub - passages in other languages are allowed .<br>
+						                        2. Teams can have a maximum of 25 members, including backstage helps, and lights and sound technicians. <br>
+						                        3. The total time of performance should be 12 and 35-50 minutes for prelims and finals respectively.<br>
+						                        4. 4 chairs and 2 tables will be provided by our side.Any other production material has to be brought by the teams themselves but the organizers hold the discretion of allowing its inclusion on stage.<br>
+						                        5. Stage Play comprises of multiple scenes and may have blackouts.<br>
+						                        6. Backstage voiceovers and narrations are allowed during the performance.<br>
+						                        7. Pre-recorded music is allowed and should be brought in a CD/DVD or a pen drive in .cda or .mp3 format only. (Other FORMATs may not be supported on the computer – use them at your own risk).<br>
+						                        8. Participants will be provided with a laptop and are expected to appoint someone to operate the laptop during the performance.<br>
+						                        9. Music may also be played live. However, no amplifiers or plug-points will be provided for this purpose.<br>
+						                        10. Participants will be provided a light control box, using which the lighting on the stage can be controlled. (Teams need to have a CA for this purpose within Team Size limit).<br>
+						                        11. Any kind of fluid, flame, live animals, heavy objects or any kind of material that damages the stage is strictly NOT allowed and may lead to disqualification.<br>
+						                        12. Obscenity (at the discretion of the judges) of any kind is NOT allowed and will lead to immediate disqualification.<br>
+						                        13. Inappropriate content, blasphemy or content defaming any political or religious group is strictly prohibited.<br>
+						                        14. Time Limit should be strictly followed. Participants will be penalized by judges for not doing so. The time duration for prelims and finals includes performance time and stage setting time. The given time duration is from empty stage to empty stage.<br>
+						                        15. The decision of the judges will be final and binding. <br>
+						                        16. The prelims will be on 11th February and slots for the same will be declared on 9th February.<br>
+						                        17. The selected teams for the finals shall be informed through mail and the prelim result shall also be posted on the pratibimb facebook page.
+						                    </div>
+						                </div>
+						                <div id="natyamenu2" class="tab-pane fade">
+						                    <div class="contact-content">
+						                        <b>Shikhar Sachdeva </b> +91-8447403102<br>
+						                        <b>Manav Gupta </b> +91-9971838304<br>
+						                    </div>
+						                </div>
+						            </div>
+						        </div>
+
+						    </div>
+	                    </div>
+	         
 	                </div>
 			    </div>
 			    <!-- <div class="modal-footer">
