Fashion Events added

--- a/index.html
+++ b/index.html
@@ -1627,9 +1627,98 @@
 			    </div>
 			    <div class="modal-body">
 			      <div class="row">
-	                        <div class="sponsor-type"><center>Title Sponsor</center></div>
-	                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
-	                        </div>
+	                    <div class="col-xs-3">
+	                    	<ul class="event-ul nav nav-tabs nav-stacked">
+	                            <li><a data-toggle="tab" href="#paridhan" class="event-list float-nav">Paridhan</a></li>
+	                            <li><a data-toggle="tab" href="#campus-princess" class="event-list float-nav">Campus Princess</a></li>
+	                        </ul>
+	                    </div>
+	                    <div class="col-xs-9">
+	                    	<div class= "tab-content">
+		                    	<!-- Paridhan -->
+		                    	<div id="paridhan" class="tab-pane fade in active">
+			                    	<ul class="nav nav-tabs">
+						                <li class="active"><a data-toggle="tab" href="#paridhanhome">Info</a></li>
+						                <li><a data-toggle="tab" href="#paridhanmenu1">Rules</a></li>
+						                <li><a data-toggle="tab" href="#paridhanmenu2">Contact</a></li>
+						                <button class="btn pull-right" href="https://docs.google.com/forms/d/1v0aiBC8-hb0xxZ4EUiXITfXjhhBMh4AsmH_OxNpBHz0/viewform">Register</button>
+						            </ul>
+
+						            <div class="tab-content">
+						                <div id="paridhanhome" class="tab-pane fade in active">
+						                    <div class="info-content">
+						                        <div class="info-row">If you think you have it in you to set fire to the stage with thousands of eyes on  each perfectly choreographed step you take on the ramp, this is where you belong
+						                        </div>
+						                        <div class="info-col">
+						                            <b>Date: </b>14 Feb<br>
+						                            <b>Time: </b>4:00 pm<br>
+						                            <b>Venue: </b>Sports Complex<br>
+						                        </div>
+						                        <div class="info-col"></div>
+						                    </div>
+						                </div>
+						                <div id="paridhanmenu1" class="tab-pane fade">
+						                    <div class="rule-content">1. Only one entry per college is allowed.<br>
+						                        2. It’s a team event, a team can have 12-15 members(including participants, choreographer, co-ordinator).<br>
+						                        3. The event has two rounds - Western and Theme.<br>
+						                        4. Time limit for each round will be 10 minutes including set up and performance.<br>
+						                        5. Negative marks if time limit is exceeded.<br>
+						                        6. Theme selection is open to the team.<br>
+						                        7. Green room will be provided.<br>
+						                        8. Teams shall carry their tracks with them.<br>
+						                        9. Teams will be judged based on costumes, theme, walking stance and attitude.<br>
+						                        10. Decision of the judges will be final and no discussion shall be held over it.<br>
+						                        11. Creating nuisance ,consumption of alcohol smoking etc will lead to the debarment of the team.
+						                    </div>
+						                </div>
+						                <div id="paridhanmenu2" class="tab-pane fade">
+						                    <div class="contact-content">
+						                        <b>Vishal Rana </b> +91-9899033311 <br>
+						                        <b>Aditi Maheshwari </b> +91-9717481156 <br>
+						                    </div>
+						                </div>
+						            </div>
+						        </div>
+
+					            <!-- Campus Princess -->
+					            <div id="campus-princess" class="tab-pane fade">
+						            <ul class="nav nav-tabs">
+						                <li class="active"><a data-toggle="tab" href="#campus-princesshome">Info</a></li>
+						                <li><a data-toggle="tab" href="#campus-princessmenu2">Contact</a></li>
+						                <button class="btn pull-right" href="https://docs.google.com/forms/d/1v0aiBC8-hb0xxZ4EUiXITfXjhhBMh4AsmH_OxNpBHz0/viewform">Register</button>
+						            </ul>
+
+						            <div class="tab-content">
+						                <div id="campus-princesshome" class="tab-pane fade in active">
+						                    <div class="info-content">
+						                        <div class="info-row">
+						                            Engifest 2k16 presents Campus Princess - a pageant
+						                            wrapped up with infinite oomph and glamour. Campus Princess is a
+						                            platform to bring out your raw talent and to introduce yourself as the
+						                            most stunning and talented girl in the campus.  With varied
+						                            aspirations, passions and rock solid attitude, these girls are never
+						                            going to bow down again.
+						                        </div>
+						                        <div class="info-col">
+						                            <b>Date: </b>13 Feb<br>
+						                            <b>Time: </b>12:00 pm<br>
+						                            <b>Venue: </b>Sports Complex<br>
+						                        </div>
+						                        <div class="info-col"></div>
+						                    </div>
+						                </div>
+						                <div id="campus-princessmenu2" class="tab-pane fade">
+						                    <div class="contact-content">
+						                        <b>Aditi Maheshwari </b> +91-9717481156<br>
+						                        <b>Nalin Choudhary </b> +91-8588001179<br>
+						                    </div>
+						                </div>
+						            </div>
+						        </div>
+
+						    </div>
+	                    </div>
+	         
 	                </div>
 			    </div>
 			    <!-- <div class="modal-footer">
