About and legacy modals added, close button resolved, floating menu items

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 		<!-- Loader -->
 		<div id="loader">
 			<svg width="300px" height="200px" viewBox="0 0 187.3 93.7" preserveAspectRatio="xMidYMid meet" style="left: 50%; top: 50%; position: absolute; transform: translate(-50%, -50%) matrix(1, 0, 0, 1, 0, 0);">
-			  <path stroke="#ededed" id="outline" fill="none" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" 
+			 <path stroke="#ededed" id="outline" fill="none" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" 
 			        d="M93.9,46.4c9.3,9.5,13.8,17.9,23.5,17.9s17.5-7.8,17.5-17.5s-7.8-17.6-17.5-17.5c-9.7,0.1-13.3,7.2-22.1,17.1 				c-8.9,8.8-15.7,17.9-25.4,17.9s-17.5-7.8-17.5-17.5s7.8-17.5,17.5-17.5S86.2,38.6,93.9,46.4z" />
-			  <path id="outline-bg" opacity="0.05" fill="none" stroke="#ededed" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" 
+			<path id="outline-bg" opacity="0.05" fill="none" stroke="#ededed" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" 
 			        d="				M93.9,46.4c9.3,9.5,13.8,17.9,23.5,17.9s17.5-7.8,17.5-17.5s-7.8-17.6-17.5-17.5c-9.7,0.1-13.3,7.2-22.1,17.1 				c-8.9,8.8-15.7,17.9-25.4,17.9s-17.5-7.8-17.5-17.5s7.8-17.5,17.5-17.5S86.2,38.6,93.9,46.4z" />
-				</svg>
+			</svg>
 		</div>
 		<script type="text/javascript" src="script/loader.js"></script>
 		
@@ -81,11 +81,11 @@
 		
 		<!-- Lower Horizontal Menu -->
 		<div id="Menu" class="row">
-			<div id="home" class="col-xs-2 col-xs-offset-1 align-center">HOME</div>
-			<div id="events" class="col-xs-2 align-center">EVENTS</div>
-			<div id="sponsors" class="col-xs-2 align-center">SPONSORS</div>
-			<div id="contact" class="col-xs-2 align-center">CONTACT</div>
-			<div id="registration" class="col-xs-2 align-center">REGISTRATION</div>
+			<div id="home" class="col-xs-2 col-xs-offset-1 align-center floath1">Home</div>
+			<div id="events" class="col-xs-2 align-center  floath2">Events</div>
+			<div id="sponsors" class="col-xs-2 align-center floath3">Sponsers</div>
+			<div id="contact" class="col-xs-2 align-center floath4">Contact</div>
+			<div id="registration" class="col-xs-2 align-center floath5">Registration</div>
 		</div>
 		
 		<!-- MODALS -->
@@ -145,6 +145,54 @@
                         <div class="sponsor-type"><center>Title Sponsor</center></div>
                         <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
                         </div>
+                </div>
+		    </div>
+		    <!-- <div class="modal-footer">
+		      <p>Modal Footer</p>
+		    </div> -->
+		  </div>
+		</div>
+
+		<!-- About Engifest -->
+		<div id="aboutEngifestModal" class="modal">
+		  <!-- Modal content -->
+		  <div class="modal-content">
+		    <div class="modal-header">
+		      <span class="close" id="spanAboutEngifestModal">&times;</span>
+		      <center><p>About Engifest</p></center>
+		    </div>
+		    <div class="modal-body">
+		    	<div class="row">
+            		<div class="info-content marginLeft">
+						<div class="info-row">
+                        	Thrill, joy and ecstasy are words that are synonymous with ENGIFEST, the Annual Cultural Fest of Delhi Technological University (formerly Delhi College of Engineering). Engifest is one of the oldest college cultural fests of the country. It was started way back in 1974 by a bunch of enthusiastic DCEians. 
+							<br>In February 2017, the fest will throw open its doors and welcome more than 30,000 enthusiastic students and professionals from all walks of life. ENGIFEST is a four day extravaganza; a celebration of sorts; a dense, fun-filled embodiment of the energy and conviviality which characterizes college life; a festival oozing with fun, vibrancy and entertainment. It is a product of dreams ambition and tireless hard work, a true testimony to the indomitable spirit, liveliness and sheer energy of the youth.
+						</div>
+					</div>
+                </div>
+		    </div>
+		    <!-- <div class="modal-footer">
+		      <p>Modal Footer</p>
+		    </div> -->
+		  </div>
+		</div>
+
+		<!-- DTU Legacy Modal -->
+		<div id="dtuLegacyModal" class="modal">
+		  <!-- Modal content -->
+		  <div class="modal-content">
+		    <div class="modal-header">
+		      <span class="close" id="spanDTULegacyModal">&times;</span>
+		      <center><p>DTU Legacy</p></center>
+		    </div>
+		    <div class="modal-body">
+		      <div class="row">
+                    <div class="info-content marginLeft">
+						<div class="info-row">
+							Delhi Technological University (formerly Delhi College of Engineering and Delhi Polytechnic) has been a premier engineering institute in the country since it came into existence in 1941, and has always striven to mould students into skilled technical experts by creating an atmosphere wherein they are consistently exposed to erudite and practical knowledge and experience. 
+							<br>Therefore, it gives us immense pleasure to express that Delhi Technological University has completed 75 glorious years of sheer excellence, and contributed to colossal human resource development and innovation in this period.
+						</div>
+					</div>
                 </div>
 		    </div>
 		    <!-- <div class="modal-footer">
@@ -260,7 +308,7 @@
 			  <!-- Modal content -->
 			  <div class="modal-content">
 			    <div class="modal-header">
-			      <span class="close" id="spanModalSatellite">&times;</span>
+			      <span class="close" id="spanModalSatellite1">&times;</span>
 			      <center><p>MISCELLANEOUS</p></center>
 			    </div>
 			    <div class="modal-body">
@@ -521,7 +569,7 @@
 			  <!-- Modal content -->
 			  <div class="modal-content">
 			    <div class="modal-header">
-			      <span class="close" id="spanModalSatellite">&times;</span>
+			      <span class="close" id="spanModalSatellite2">&times;</span>
 			      <center><p>MUSIC</p></center>
 			    </div>
 			    <div class="modal-body">
@@ -533,7 +581,7 @@
 	                            <li><a data-toggle="tab" href="#vrind" class="event-list float-nav">Vrind</a></li>
 	                            <li><a data-toggle="tab" href="#vocalicious" class="event-list float-nav">Vocalicious</a></li>
 	                            <li><a data-toggle="tab" href="#balladeers" class="event-list float-nav">Balladeers</a></li>
-	                            <li><a data-toggle="tab" href="#theres-a-show" class="event-list float-nav">Three's A Show</a></li>	                            
+	                            <li><a data-toggle="tab" href="#theres-a-show" class="event-list float-nav">There's A Show</a></li>	                            
 	                        </ul>
 	                    </div>
 	                    <div class="col-xs-9">
@@ -840,7 +888,7 @@
 			  <!-- Modal content -->
 			  <div class="modal-content">
 			    <div class="modal-header">
-			      <span class="close" id="spanModalSatellite">&times;</span>
+			      <span class="close" id="spanModalSatellite3">&times;</span>
 			      <center><p>DANCE</p></center>
 			    </div>
 			    <div class="modal-body">
@@ -1159,7 +1207,7 @@
 			  <!-- Modal content -->
 			  <div class="modal-content">
 			    <div class="modal-header">
-			      <span class="close" id="spanModalSatellite">&times;</span>
+			      <span class="close" id="spanModalSatellite4">&times;</span>
 			      <center><p>LITERARY</p></center>
 			    </div>
 			    <div class="modal-body">
@@ -1355,7 +1403,7 @@
 			  <!-- Modal content -->
 			  <div class="modal-content">
 			    <div class="modal-header">
-			      <span class="close" id="spanModalSatellite">&times;</span>
+			      <span class="close" id="spanModalSatellite5">&times;</span>
 			      <center><p>PRO NIGHTS</p></center>
 			    </div>
 			    <div class="modal-body">
@@ -1488,7 +1536,7 @@
 			  <!-- Modal content -->
 			  <div class="modal-content">
 			    <div class="modal-header">
-			      <span class="close" id="spanModalSatellite">&times;</span>
+			      <span class="close" id="spanModalSatellite6">&times;</span>
 			      <center><p>DRAMA</p></center>
 			    </div>
 			    <div class="modal-body">
@@ -1622,7 +1670,7 @@
 			  <!-- Modal content -->
 			  <div class="modal-content">
 			    <div class="modal-header">
-			      <span class="close" id="spanModalSatellite">&times;</span>
+			      <span class="close" id="spanModalSatellite7">&times;</span>
 			      <center><p>FASHION</p></center>
 			    </div>
 			    <div class="modal-body">
@@ -1736,7 +1784,7 @@
 			  <!-- Modal content -->
 			  <div class="modal-content">
 			    <div class="modal-header">
-			      <span class="close" id="spanModalSatellite">&times;</span>
+			      <span class="close" id="spanModalSatellite8">&times;</span>
 			      <center><p>INFORMAL EVENTS</p></center>
 			    </div>
 			    <div class="modal-body">
@@ -1860,7 +1908,7 @@
 			    </div> -->
 			  </div>
 			</div>
-		
+
 
 
 
