--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		                            <li id="legacy"><a href="javascript:void(0)">DTU: The Legacy</a></li>
 		                        </ul>
 		                    </li>
-		                    <li><a href="glimpses/" target="_blank"><i class="fa fa-camera"></i><span style="position: relative;">Glimpses</span></a></li>                    
+		                    <li><a href="gallery.html" target="_blank"><i class="fa fa-camera"></i><span style="position: relative;">Glimpses</span></a></li>                    
 		                    
 		                    <li><a href="javascript:void(0)"><i class="fa fa-share-alt"></i><span style="position: relative;">Social Media</span><span class="fa fa-angle-left" style="float: right; position: relative;"></span></a>
 		                      <ul>
@@ -83,7 +83,7 @@
 		<div id="Menu" class="row">
 			<div id="home" class="col-xs-2 col-xs-offset-1 align-center floath1">Home</div>
 			<div id="events" class="col-xs-2 align-center  floath2">Events</div>
-			<div id="sponsors" class="col-xs-2 align-center floath3">Sponsers</div>
+			<div id="sponsors" class="col-xs-2 align-center floath3">Sponsors</div>
 			<div id="contact" class="col-xs-2 align-center floath4">Contact</div>
 			<div id="registration" class="col-xs-2 align-center floath5">Registration</div>
 		</div>
