--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <html>
 	<head>
-
 		<!-- No cache -->
 		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Expires" content="0" />
 		
-
 		<title>Engifest</title>
 
 		<!-- Css Needed -->
 		<link href="css/loader.css" type="text/css" rel="stylesheet"/>
+		<link href="css/perspective-text.css" type="text/css" rel="stylesheet"/>
 		<link href="css/events-satellite.css" type="text/css" rel="stylesheet"/>
 		<link href="css/modal.css" type="text/css" rel="stylesheet"/>
 		<link href="css/style.css" type="text/css" rel="stylesheet"/>
@@ -41,11 +40,11 @@
 		<canvas id="myCanvas"></canvas>
 
 		<!-- Top Heading -->
-		<div id="textDiv" class="float"></div>
+		<div id="textDiv" class="float" style="z-index: 200;"></div>
 		
 
 		<!-- Sidebar -->
-		<div id="sidebar-container">
+		<div id="sidebar-container" style="z-index: 200;">
 	        <div class="page-container sidebar-collapsed">
 				<div class="sidebar-menu">
 		                
@@ -80,7 +79,7 @@
 		<div id="controlDiv" class="float"></div>
 		
 		<!-- Lower Horizontal Menu -->
-		<div id="Menu" class="row">
+		<div id="Menu" class="row" style="z-index: 200;">
 			<div id="home" class="col-xs-2 col-xs-offset-1 align-center floath1">Home</div>
 			<div id="events" class="col-xs-2 align-center  floath2">Events</div>
 			<div id="sponsors" class="col-xs-2 align-center floath3">Sponsors</div>
@@ -293,7 +292,36 @@
 		    </div>
 		</div> -->
 
+		<!-- Star War type Effect -->
+		<!-- comment if not needed, code will work fine -->
+		<div id="titles">
+			<div id="titlecontent">
 
+				<p class="center">ENGIFEST'17<br />
+					A NEW HOPE FOR COLLEGE
+				</p>
+
+				<p>
+					It is a period of vendor war.
+				</p>
+
+				<p>
+					This is a demonstration of Star Wars-style scrolling 3D titles in CSS3. It possibly has no practical purpose whatsoever but it looks great and you can impress your friends.
+				</p>
+
+				<p class="center">
+					Get Ready!
+				</p>
+
+				<p>
+					and give me a shout on Twitter &ndash; I'd love to see how you use and abuse it!
+				</p>
+
+				<p>
+					Finally, Han shot first and the original, unadulterated movies remain the best. Stop fiddling with them, George!
+				</p>
+			</div>
+		</div>
 
 
 		<!-- Events Planet Satellites -->
