--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<link href="css/perspective-text.css" type="text/css" rel="stylesheet"/>
 		<link href="css/events.css" type="text/css" rel="stylesheet"/>
 		<link href="css/left-side-menu.css" type="text/css" rel="stylesheet"/>
+		<link href="css/registration-airplane.css" type="text/css" rel="stylesheet"/>
 	</head>
 	<body id="container">
 		
@@ -79,7 +80,7 @@
         </div>
 
         <!-- Extra div for future -->
-		<div id="controlDiv" class="float"></div>
+		<div id="controlDiv" class="float" ><a class="no-decoration" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfDE9DQu8k-7vUop34rlmCDzLWTV5Xiyb2fmGZpfbPCr3YKKQ/viewform">Accomodation</a></div>
 		
 		<!-- Lower Horizontal Menu -->
 		<div id="Menu" class="row" style="z-index: 200;">
@@ -203,6 +204,30 @@
 		  </div>
 		</div>
 
+
+		<!-- Registration SVG Airplane -->
+		<div class="frame">
+			<div class="plane-container">
+				<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+				width="1131.53px" height="379.304px" viewBox="0 0 1131.53 379.304" enable-background="new 0 0 1131.53 379.304"
+				xml:space="preserve" class="plane">
+					<polygon fill="#D8D8D8" points="72.008,0 274.113,140.173 274.113,301.804 390.796,221.102 601.682,367.302 1131.53,0.223  "/>
+					<polygon fill="#C4C4C3" points="1131.53,0.223 274.113,140.173 274.113,301.804 390.796,221.102   "/>
+				</svg>
+
+			</div>
+		</div>
+
+
+
+
+
+
+
+
+
+
+
 		<!-- Home Design -->
 		<div id = "home-design-wrapper">
 			<div id="left-side-menu">
@@ -222,7 +247,7 @@
 		            <a href="events/livewire/index.html" target="_blank"><img src="assets/main/vs-cover.jpg"></a>
 		        </div>
 		        <div class="dates">
-		            17th - 20th Feb 2016
+		            17th - 19th Feb 2016
 		        </div>
 			</div>
 			<div id="home-design">
