Contact us moved to side nav

--- a/index.html
+++ b/index.html
@@ -73,21 +73,25 @@
 		                      </ul>
 		                    </li>
 		                    <li id="engifest-team"><a href="engifest-team/" target="_blank"><i class="fa fa-wrench"></i><span style="position: relative;">Engifest Team</span></a></li>
+		                    <li id="contact-us"><a href="javascript:void(0)"><i class="fa fa-envelope"></i><span>Contact Us</span></a></li>
 		                  </ul>
 		                </div>
 		        </div>
 	        </div>
         </div>
 
-        <!-- Extra div for future -->
-		<div id="controlDiv" class="float" ><a class="no-decoration" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfDE9DQu8k-7vUop34rlmCDzLWTV5Xiyb2fmGZpfbPCr3YKKQ/viewform">Accomodation</a></div>
+        <!-- Accomodation div for future -->
+		<div id="accomodationDiv" class="float" >
+			<a class="no-decoration" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfDE9DQu8k-7vUop34rlmCDzLWTV5Xiyb2fmGZpfbPCr3YKKQ/viewform">Accomodation
+			</a>
+		</div>
 		
 		<!-- Lower Horizontal Menu -->
 		<div id="Menu" class="row" style="z-index: 200;">
-			<div id="home" class="col-xs-2 col-xs-offset-1 align-center floath1">Home</div>
+			<div id="home" class="col-xs-2 col-xs-offset-2 align-center floath1">Home</div>
 			<div id="events" class="col-xs-2 align-center  floath2">Events</div>
 			<div id="sponsors" class="col-xs-2 align-center floath3">Sponsors</div>
-			<div id="contact" class="col-xs-2 align-center floath4">Contact</div>
+			<!-- <div id="contact" class="col-xs-2 align-center floath4">Contact</div> -->
 			<div id="registration" class="col-xs-2 align-center floath5">Registration</div>
 		</div>
 		
@@ -99,28 +103,7 @@
 		  <div class="modal-content">
 		    <div class="modal-header">
 		      <span class="close" id="spanSponsorModal">&times;</span>
-		      <center><p>Modal Header</p></center>
-		    </div>
-		    <div class="modal-body">
-		      <div class="row">
-                        <div class="sponsor-type"><center>Title Sponsor</center></div>
-                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
-                        </div>
-                </div>
-		    </div>
-		    <!-- <div class="modal-footer">
-		      <p>Modal Footer</p>
-		    </div> -->
-		  </div>
-		</div>
-
-		<!-- Contact Modal -->
-		<div id="contactModal" class="modal">
-		  <!-- Modal content -->
-		  <div class="modal-content">
-		    <div class="modal-header">
-		      <span class="close" id="spanContactModal">&times;</span>
-		      <center><p>Modal Header</p></center>
+		      <center><p>Sponsors</p></center>
 		    </div>
 		    <div class="modal-body">
 		      <div class="row">
@@ -141,7 +124,7 @@
 		  <div class="modal-content">
 		    <div class="modal-header">
 		      <span class="close" id="spanRegisterModal">&times;</span>
-		      <center><p>Modal Header</p></center>
+		      <center><p>Register</p></center>
 		    </div>
 		    <div class="modal-body">
 		      <div class="row">
@@ -204,6 +187,26 @@
 		  </div>
 		</div>
 
+		<!-- Contact Modal -->
+		<div id="contactModal" class="modal">
+		  <!-- Modal content -->
+		  <div class="modal-content">
+		    <div class="modal-header">
+		      <span class="close" id="spanContactModal">&times;</span>
+		      <center><p>Contact Us</p></center>
+		    </div>
+		    <div class="modal-body">
+		      <div class="row">
+                        <div class="sponsor-type"><center>Title Sponsor</center></div>
+                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
+                        </div>
+                </div>
+		    </div>
+		    <!-- <div class="modal-footer">
+		      <p>Modal Footer</p>
+		    </div> -->
+		  </div>
+		</div>
 
 		<!-- Registration SVG Airplane -->
 		<div class="frame">
