--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
 		<script type="text/javascript" src="script/loader.js"></script>
 		
 		<!-- Canvas  -->
+		<audio id="background-ambience">
+			<source src="assets/sounds/2222222331__black-boe__wind.ogg" type="audio/ogg">
+			<!-- <source src="horse.mp3" type="audio/mpeg"> -->
+		</audio>
+
+		<audio id="hover-menu-sound">
+			<source src="assets/sounds/2222222251390__deadsillyrabbit__button-hover-mp3.mp3" type="audio/ogg">
+			<!-- <source src="horse.mp3" type="audio/mpeg"> -->
+		</audio>
+
+
 		<canvas id="myCanvas"></canvas>
 
 		
@@ -81,18 +92,18 @@
         </div>
 
         <!-- Accomodation div for future -->
-		<div id="accomodationDiv" class="float" >
+		<div id="accomodationDiv" class="float lowermenusound" >
 			<a class="no-decoration" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfDE9DQu8k-7vUop34rlmCDzLWTV5Xiyb2fmGZpfbPCr3YKKQ/viewform">Accomodation
 			</a>
 		</div>
 		
 		<!-- Lower Horizontal Menu -->
 		<div id="Menu" class="row" style="z-index: 200;">
-			<div id="home" class="col-xs-2 col-xs-offset-2 align-center floath1">Home</div>
-			<div id="events" class="col-xs-2 align-center  floath2">Events</div>
-			<div id="sponsors" class="col-xs-2 align-center floath3">Sponsors</div>
+			<div id="home" class="col-xs-2 col-xs-offset-2 align-center floath1 lowermenusound">Home</div>
+			<div id="events" class="col-xs-2 align-center  floath2 lowermenusound">Events</div>
+			<div id="sponsors" class="col-xs-2 align-center floath3 lowermenusound">Sponsors</div>
 			<!-- <div id="contact" class="col-xs-2 align-center floath4">Contact</div> -->
-			<div id="registration" class="col-xs-2 align-center floath5">Registration</div>
+			<div id="registration" class="col-xs-2 align-center floath5 lowermenusound">Registration</div>
 		</div>
 		
 		<!-- MODALS -->
