--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Expires" content="0" />
+		<meta itemprop="name" content="Engifest &middot; Endless Energetic Enigmatic">
+        <meta itemprop="description" content="Engifest 2017">
 		
-		<title>Engifest</title>
+		<title>Engifest'17</title>
 
 		<!-- Css Needed -->
 		<link href="css/loader.css" type="text/css" rel="stylesheet"/>
@@ -261,7 +263,7 @@
 		            <a href="events/livewire/index.html" target="_blank"><img src="assets/main/vs-cover.jpg"></a>
 		        </div>
 		        <div class="dates">
-		            17th - 19th Feb 2016
+		            17th - 19th Feb 2017
 		        </div>
 			</div>
 			<div id="home-design">
