modal footer corrected

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 		      <span class="close" id="spanSponsorModal">&times;</span>
 		      <center><p>Sponsors</p></center>
 		    </div>
-		    <div class="modal-body">
+		    <div class="modal-body modal-footer">
 		      <div class="row">
                         <div class="sponsor-type"><center>Title Sponsor</center></div>
                         <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
@@ -139,7 +139,7 @@
 		      <span class="close" id="spanRegisterModal">&times;</span>
 		      <center><p>Register</p></center>
 		    </div>
-		    <div class="modal-body">
+		    <div class="modal-body modal-footer">
 		      <div class="row">
                         <div class="sponsor-type"><center>Title Sponsor</center></div>
                         <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
@@ -160,7 +160,7 @@
 		      <span class="close" id="spanAboutEngifestModal">&times;</span>
 		      <center><p>About Engifest</p></center>
 		    </div>
-		    <div class="modal-body">
+		    <div class="modal-body modal-footer">
 		    	<div class="row">
             		<div class="info-content marginLeft">
 						<div class="info-row">
@@ -184,7 +184,7 @@
 		      <span class="close" id="spanDTULegacyModal">&times;</span>
 		      <center><p>DTU Legacy</p></center>
 		    </div>
-		    <div class="modal-body">
+		    <div class="modal-body modal-footer">
 		      <div class="row">
                     <div class="info-content marginLeft">
 						<div class="info-row">
@@ -208,7 +208,7 @@
 		      <span class="close" id="spanContactModal">&times;</span>
 		      <center><p>Contact Us</p></center>
 		    </div>
-		    <div class="modal-body">
+		    <div class="modal-body modal-footer">
 		      <div class="row">
                         <div class="sponsor-type"><center>Title Sponsor</center></div>
                         <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
@@ -3024,7 +3024,7 @@
 			      <span class="close" id="spanModalSatellite1">&times;</span>
 			      <center><p>MISCELLANEOUS</p></center>
 			    </div>
-			    <div class="modal-body">
+			    <div class="modal-body modal-footer">
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
@@ -3285,7 +3285,7 @@
 			      <span class="close" id="spanModalSatellite2">&times;</span>
 			      <center><p>MUSIC</p></center>
 			    </div>
-			    <div class="modal-body">
+			    <div class="modal-body modal-footer">
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
@@ -3604,7 +3604,7 @@
 			      <span class="close" id="spanModalSatellite3">&times;</span>
 			      <center><p>DANCE</p></center>
 			    </div>
-			    <div class="modal-body">
+			    <div class="modal-body modal-footer">
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
@@ -3923,7 +3923,7 @@
 			      <span class="close" id="spanModalSatellite4">&times;</span>
 			      <center><p>LITERARY</p></center>
 			    </div>
-			    <div class="modal-body">
+			    <div class="modal-body modal-footer">
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
@@ -4119,7 +4119,7 @@
 			      <span class="close" id="spanModalSatellite5">&times;</span>
 			      <center><p>PRO NIGHTS</p></center>
 			    </div>
-			    <div class="modal-body">
+			    <div class="modal-body modal-footer">
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
@@ -4252,7 +4252,7 @@
 			      <span class="close" id="spanModalSatellite6">&times;</span>
 			      <center><p>DRAMA</p></center>
 			    </div>
-			    <div class="modal-body">
+			    <div class="modal-body modal-footer">
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
@@ -4386,7 +4386,7 @@
 			      <span class="close" id="spanModalSatellite7">&times;</span>
 			      <center><p>FASHION</p></center>
 			    </div>
-			    <div class="modal-body">
+			    <div class="modal-body modal-footer">
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
@@ -4500,7 +4500,7 @@
 			      <span class="close" id="spanModalSatellite8">&times;</span>
 			      <center><p>INFORMAL EVENTS</p></center>
 			    </div>
-			    <div class="modal-body">
+			    <div class="modal-body modal-footer">
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
