background-ambience sound to star full of stars song

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 		
 		<!-- Canvas  -->
 		<audio id="background-ambience">
-			<source src="assets/sounds/2222222331__black-boe__wind.ogg" type="audio/ogg">
+			<source src="assets/sounds/background-ambience.mp3" type="audio/mpeg">
 			<!-- <source src="horse.mp3" type="audio/mpeg"> -->
 		</audio>
 
 		<audio id="hover-menu-sound">
-			<source src="assets/sounds/2222222251390__deadsillyrabbit__button-hover-mp3.mp3" type="audio/ogg">
+			<source src="assets/sounds/button-hover-mp3.mp3" type="audio/mpeg">
 			<!-- <source src="horse.mp3" type="audio/mpeg"> -->
 		</audio>
 
@@ -223,17 +223,6 @@
 		</div>
 
 	
-
-
-
-
-
-
-
-
-
-
-
 		<!-- Home Design -->
 		<div id = "home-design-wrapper">
 			<div id="left-side-menu">
@@ -270,7 +259,7 @@
 				</div>
 			</div>
 
-			
+
 			<div id="home-design">
 				<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 				 viewBox="0 0 400 400" enable-background="new 0 0 400 400" xml:space="preserve">
